github, taiga und rechtliches

--- a/Usermanual/Usermanual.tex
+++ b/Usermanual/Usermanual.tex
@@ -259,6 +259,39 @@ Mit dieser Funktion leeren Sie die Ausgabe im Hauptfenster
 \section{Schritt-für-Schritt Beispiel}
 
 \section{Rechtliche Hinweise}
+\subsection{Haftungsausschluss}
+Die Dokumente der ITSecX enthalten Links zu externen Webseiten. 
+Die inhalte der externen Webseiten sind implementierungen und nicht
+im Angebot inkludiert. 
+Die Links sind ausschließlich Verweise zu ergänzenden Information
+zu verstehen. 
+Auf die Inhalte der verlinkten Webseiten haben wir keinen direkten
+Einfluss. 
+Zum Zeitpunkt der Verlinkung waren rechtswidrige 
+Inhalte nicht erkennbar. 
+Falls solche Inhalte zu einem späteren Zeitpunkt bekannt werden sollten,
+werden die betreffenden Inhalte angepasst.
+
+\subsection{Lizenz}
+Die ITSecX möchte sich Ihnen mit einem erfolgreichem Produkt 
+präsentieren. 
+Das darin enthaltene geistige Eigentum wie Patente, 
+Marken und Urheberrechte ist geschützt.
+Durch dieses Produkt wird keine Lizenz zur Nutzung des 
+geistigen Eigentums der Marke ITSecX erteilt.
+
+\subsection{Urheberrechte}
+
+
+© Copyright TGM, 1200 Wien. Alle Rechte vorbehalten. 
+Text, Bilder, Grafiken, Sound, Animationen und Videos sowie deren 
+Anordnung auf dem ITSecX-Produkt unterliegen dem Schutz des Urheberrechts 
+und anderer Schutzgesetze.
+
+Es wird untersagt, den Inhalt dieses Produktes oder Teile davon, 
+zu kommerziellen oder auch zu privaten Zwecken zu kopieren, 
+zu verbreiten, zu verändern, auf anderen Websites zu verwenden 
+oder Dritten zugänglich zu machen.
 
 
 \end{document}
